<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/editprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvProfile"
                android:textSize="20sp">
            </TextView>

            <View
                android:layout_width="match_parent"
                android:visibility="visible"
                android:layout_height="3dp"
                android:background="#BDBBBB"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvpassword"
                android:textSize="20sp">
            </TextView>

            <View
                android:layout_width="match_parent"
                android:visibility="visible"
                android:layout_height="3dp"
                android:background="#BDBBBB"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvLogout"
                android:textSize="20sp">
            </TextView>

            <View
                android:layout_width="match_parent"
                android:visibility="visible"
                android:layout_height="3dp"
                android:background="#BDBBBB"/>

        </LinearLayout>


    </LinearLayout>



</LinearLayout>